--- a/theySaidWhat/manifest.json
+++ b/theySaidWhat/manifest.json
@@ -1,15 +1,28 @@
 {
   "manifest_version": 2,
-
-  "name": "GuyOrGirl Analyzer",
+  "name": "Gender analyzer",
   "description": "Will highlight all the names on a page and estimate which gender they belong to.",
-  "version": "1.0",
-
+  "version": "0.1",
   "browser_action": {
-   "default_icon": "icon.png",
-   "default_popup": "popup.html"
+    "default_icon": "images/icon.png",
+    "default_popup": "popup.html"
   },
+  "background": {
+    "scripts": [
+      "js/background.js"
+    ]
+  },
+  "content_scripts": [
+    {
+      "js": [
+        "js/content-script.js"
+      ],
+      "css": [
+        "css/highlighted.css"
+      ]
+    }
+  ],
   "permissions": [
-   "activeTab"
-   ]
+    "tabs"
+  ]
 }
