--- a/theySaidWhat/manifest.json
+++ b/theySaidWhat/manifest.json
@@ -15,7 +15,7 @@
   "content_scripts": [
     {
       "js": [
-        "js/content-script.js"
+        "js/content.js"
       ],
       "css": [
         "css/highlighted.css"
