--- a/theySaidWhat/manifest.json
+++ b/theySaidWhat/manifest.json
@@ -1,21 +1,8 @@
 {
 	"manifest_version": 2,
-	"name": "Automatic Keywords Highlighter",
-	"short_name": "Automatic Keywords Highlighter",
-	"description": "Automatically highlights given keywords on any web page you visit.",
-	"version": "0.0.0",
-	"icons": {
-		"16": "icons/icon16.png",
-		"24": "icons/icon24.png",
-		"32": "icons/icon32.png",
-		"48": "icons/icon48.png",
-		"64": "icons/icon64.png",
-		"72": "icons/icon72.png",
-		"96": "icons/icon96.png",
-		"128": "icons/icon128.png",
-		"256": "icons/icon256.png"
-	},
-	"homepage_url": "https://github.com/wrzlbrmft/chrome-keywords-highlighter/blob/master/README.md",
+	"name": "Gender Analyzer",
+  	"description": "Will highlight all the names on a page and estimate which gender they belong to.",
+  	"version": "0.1",
 	"permissions": ["tabs"],
 	"background": {
 		"scripts": ["background.js"]
@@ -28,19 +15,9 @@
 		}
 	],
 	"browser_action": {
-		"default_icon": {
-			"16": "icons/icon16.png",
-			"24": "icons/icon24.png",
-			"32": "icons/icon32.png",
-			"48": "icons/icon48.png",
-			"64": "icons/icon64.png",
-			"72": "icons/icon72.png",
-			"96": "icons/icon96.png",
-			"128": "icons/icon128.png",
-			"256": "icons/icon256.png"
-		},
-		"default_title": "Automatic Keywords Highlighter",
-		"default_popup": "popup.html"
-	},
-	"options_page": "options.html"
+		"default_icon": "icon.png",
+   		"default_popup": "popup.html",
+		"default_title": "Who Said What?"
+	}
+	//"options_page": "options.html"
 }
