--- a/theySaidWhat/manifest.json
+++ b/theySaidWhat/manifest.json
@@ -14,6 +14,7 @@
   },
   "content_scripts": [
     {
+      "matches": ["http://*/*", "https://*/*"],
       "js": [
         "js/content.js"
       ],
